# ramtorch-gpt2

./: README.md  pyproject.toml  requirements.txt
configs/: micro_test.yaml  train_0p1b.yaml  train_1b.yaml  train_1b_4090.yaml
src/ramgpt/: __init__.py  config.py  data.py  inference.py  model.py  train.py  utils.py
src/ramgpt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
